--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,16 +1,18 @@
-name: Build
+name: Build Swift Project
 on:
   push:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9.2-windowsservercore-ltsc2022
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: swift build
-        run: swift build -c release
-      - name: ls
-        run: ls -a ./.build/release
+
+      - name: Swift Build and List
+        run: |
+          docker run --rm \
+          --workdir /github/workspace \
+          -v ${{ github.workspace }}:/github/workspace \
+          swift:5.9.2-windowsservercore-ltsc2022 \
+          bash -c "swift build -c release && ls ./.build/release"
