--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,9 +10,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Swift Build and List
-        run: |
-          docker run --rm \
-          --workdir /github/workspace \
-          -v ${{ github.workspace }}:/github/workspace \
-          swift:5.9.2-windowsservercore-ltsc2022 \
-          bash -c "swift build -c release && ls ./.build/release"
+        run: docker run --rm -v "$(pwd):/swift-project" -w /swift-project swift:5.9.2-windowsservercore-ltsc2022 bash -c "swift build -c release && ls ./.build/release"
+
