--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,5 +9,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - run: pwd
+
       - name: Swift Build and List
-        run: docker run --rm -v "/d/a/multiplatform-swift-cli/multiplatform-swift-cli:/swift-project" -w /swift-project swift:5.9.2-windowsservercore-ltsc2022 bash -c "swift build -c release && ls ./.build/release"
+        run: docker run --rm -w /swift-project swift:5.9.2-windowsservercore-ltsc2022 bash -c "pwd && ls && swift --version"
